--- a/renderGymToColab/GymToColabAdaptor.ipynb
+++ b/renderGymToColab/GymToColabAdaptor.ipynb
@@ -42,27 +42,7 @@
         "  !pip install --upgrade setuptools 2>&1\n",
         "  !pip install ez_setup > /dev/null 2>&1\n",
         "  !pip install gym[atari] > /dev/null 2>&1\n",
-        "  !pip install pyglet==1.3.2\n",
-        "\n",
-        "  import gym\n",
-        "  from gym import logger as gymlogger\n",
-        "  from gym.wrappers import Monitor\n",
-        "  gymlogger.set_level(40) #error only\n",
-        "  import tensorflow as tf\n",
-        "  import numpy as np\n",
-        "  import random\n",
-        "  import matplotlib\n",
-        "  import matplotlib.pyplot as plt\n",
-        "  %matplotlib inline\n",
-        "  import math\n",
-        "  import glob\n",
-        "  import io\n",
-        "  import base64\n",
-        "  from IPython.display import HTML\n",
-        "  from IPython import display as ipythondisplay\n",
-        "  from pyvirtualdisplay import Display\n",
-        "  display = Display(visible=0, size=(1400, 900))\n",
-        "  display.start()\n"
+        "  !pip install pyglet==1.3.2\n"
       ],
       "execution_count": 0,
       "outputs": []
@@ -76,6 +56,37 @@
       "source": [
         "Import libraries"
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LVVr0VIMYlhz",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "import gym\n",
+        "from gym import logger as gymlogger\n",
+        "from gym.wrappers import Monitor\n",
+        "gymlogger.set_level(40) #error only\n",
+        "import tensorflow as tf\n",
+        "import numpy as np\n",
+        "import random\n",
+        "import matplotlib\n",
+        "import matplotlib.pyplot as plt\n",
+        "%matplotlib inline\n",
+        "import math\n",
+        "import glob\n",
+        "import io\n",
+        "import base64\n",
+        "from IPython.display import HTML\n",
+        "from IPython import display as ipythondisplay\n",
+        "from pyvirtualdisplay import Display\n",
+        "display = Display(visible=0, size=(1400, 900))\n",
+        "display.start()\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
