imports aren t in function and are not runned

--- a/renderGymToColab/GymToColabAdaptor.ipynb
+++ b/renderGymToColab/GymToColabAdaptor.ipynb
@@ -65,6 +65,34 @@
         "colab": {}
       },
       "source": [
+        "\n"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QRIWaZrQkoV4",
+        "colab_type": "text"
+      },
+      "source": [
+        "Utility functions to enable video recording of gym environment and displaying it\n",
+        "To enable video, just do \"env = wrap_env(env)\"\"\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TXSBT7OqkuZP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 128
+        },
+        "outputId": "58b2ba28-1fd1-4690-8bec-f39c108f0a7a"
+      },
+      "source": [
         "import gym\n",
         "from gym import logger as gymlogger\n",
         "from gym.wrappers import Monitor\n",
@@ -82,31 +110,12 @@
         "from IPython.display import HTML\n",
         "from IPython import display as ipythondisplay\n",
         "from pyvirtualdisplay import Display\n",
-        "display = Display(visible=0, size=(1400, 900))\n",
-        "display.start()\n"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "QRIWaZrQkoV4",
-        "colab_type": "text"
-      },
-      "source": [
-        "Utility functions to enable video recording of gym environment and displaying it\n",
-        "To enable video, just do \"env = wrap_env(env)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "TXSBT7OqkuZP",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
+        "\n",
+        "\n",
+        "def start_display():\n",
+        "  display = Display(visible=0, size=(1400, 900))\n",
+        "  display.start()\n",
+        "\n",
         "def show_video():\n",
         "  mp4list = glob.glob('video/*.mp4')\n",
         "  if len(mp4list) > 0:\n",
@@ -124,6 +133,28 @@
         "def wrap_env(env):\n",
         "  env = Monitor(env, './video', force=True)\n",
         "  return env"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "IndentationError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-8f68398b2390>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    def show_video():\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NDph537kZowL",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
       ],
       "execution_count": 0,
       "outputs": []
