packages and libs not in  any function

--- a/renderGymToColab/GymToColabAdaptor.ipynb
+++ b/renderGymToColab/GymToColabAdaptor.ipynb
@@ -86,13 +86,20 @@
       "metadata": {
         "id": "TXSBT7OqkuZP",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 128
-        },
-        "outputId": "58b2ba28-1fd1-4690-8bec-f39c108f0a7a"
+        "colab": {}
       },
       "source": [
+        "#remove \" > /dev/null 2>&1\" to see what is going on under the hood\n",
+        "!pip install gym pyvirtualdisplay > /dev/null 2>&1\n",
+        "!apt-get install -y xvfb python-opengl ffmpeg > /dev/null 2>&1\n",
+        "\n",
+        "!apt-get update > /dev/null 2>&1\n",
+        "!apt-get install cmake > /dev/null 2>&1\n",
+        "!pip install --upgrade setuptools 2>&1\n",
+        "!pip install ez_setup > /dev/null 2>&1\n",
+        "!pip install gym[atari] > /dev/null 2>&1\n",
+        "!pip install pyglet==1.3.2\n",
+        "\n",
         "import gym\n",
         "from gym import logger as gymlogger\n",
         "from gym.wrappers import Monitor\n",
@@ -134,17 +141,8 @@
         "  env = Monitor(env, './video', force=True)\n",
         "  return env"
       ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-8f68398b2390>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    def show_video():\u001b[0m\n\u001b[0m      ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-          ]
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
